# film-lut-gen

./: common.py  converter.py  film.py  main.py  passes.py  pyproject.toml  test_pass.json
data/ektachrome-100-plus/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/ektachrome-100ec/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/ektachrome-64/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/ektachrome-64t/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/kodachrome-200/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/kodachrome-25/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  sen-gm.npy  sen-rc.npy
data/kodachrome-64/: char-by.npy  char-gm.npy  char-rc.npy  dye-spec-by.npy  dye-spec-gm.npy  dye-spec-neutral.npy  dye-spec-rc.npy  sen-by.npy  (+2 more)
lut-cache/: ektachrome-100-plus==xyz.csp  ektachrome-100ec==xyz.csp  ektachrome-64==xyz.csp  ektachrome-64t==xyz.csp  kodachrome-200-pro==xyz.csp  kodachrome-25-pro==xyz.csp  kodachrome-25==xyz.csp  kodachrome-64-pro==xyz.csp
(+21 files in other folders)
